kubernetes/postgresql/manifests/pgadmin-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: stripprefix-pgadmin
  namespace: postgresql
spec:
  stripPrefix:
    prefixes:
      - "/pgadmin"
