kubernetes/postgresql/manifests/pgadmin-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: pgadmin-ingress
  namespace: postgresql

spec:
  entryPoints:
    - web

  routes:
    - match: PathPrefix(`/pgadmin`)
      kind: Rule
      services:
        - name: pgadmin-pgadmin4
          port: 80
      middlewares:
        - name: stripprefix-pgadmin
